# SmolWorld

./: .gitignore  README.md  create_dummy_ema.py  list_shards.py  pyproject.toml  train_vqvae.py  train_world_model.py
data/: pipeline.py
inference/: play.py
models/: quantizer.py  transformer.py  vqvae.py
tests/: test_transformer.py  test_vqvae.py
